\name{NEWS} \title{News for Package \pkg{rebmix}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2.11.0}{ 
\itemize{
\item ???.
}
}
\section{Changes in version 2.10.3}{ 
\itemize{
\item Method \code{Zp} is replaced by \code{a.Zp} accessor method.
\item Method \code{coef} is replaced by \code{a.theta1.all} and \code{a.theta2.all} accessor methods.
\item Accessor methods are added for all slots.
\item Class \code{"RNGMIX.Theta"} is added.
\item Method \code{show} is added for \code{"RCLS.chunk"} class.
\item Minimum number of component \code{cmin} is added to \code{REBMIX} arguments.
\item Minimum number of component \code{cmin} slot is added to \code{"REBMIX"} class.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item Preprocessing \code{"Parzen window"} is renamed to \code{"kernel density estimation"}.
\item Rough parameter estimation for binomial and Poisson parametric families is improved.
\item Latent class analysis is added.
}
}
\section{Changes in version 2.10.2}{ 
\itemize{
\item Method \code{split} is improved.
\item Fixed GCC 8.1 notes and warnings in C++ functions.
}
}
\section{Changes in version 2.10.1}{ 
\itemize{
\item Fixed numerical problems related to high dimensional datasets.
\item Fixed bug in \code{REBMIX} method.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXPW()} and \code{REBMIXH()}.
\item Improved C++ functions \code{RoughEstimationKNN()}, \code{RoughEstimationPW()} and \code{RoughEstimationH()}.
}
}
\section{Changes in version 2.10.0}{ 
\itemize{
\item Fixed bug in \code{plot} method.
\item Additional argument \code{rseed} enters \code{boot} method.
\item Maximum number of nonempty bins has been introduced in C++ to avoid histograms with excessive number of nonempty bins.
}
}
\section{Changes in version 2.9.3}{ 
\itemize{
\item Acceleration rate has been improved. It is now progressively increasing.