@@ -1,12 +1,13 @@
 Package: rebmix
 Version: 2.11.0
 Authors@R: c(person("Marko", "Nagode", role = c("aut", "cre"),
-                     email = "marko.nagode@fs.uni-lj.si"))
+                     email = "marko.nagode@fs.uni-lj.si"),
+             person("Branislav", "Panic", role = "ctb"))
 Title: Finite Mixture Modeling, Clustering & Classification
 Suggests: flexmix, mclust, mixtools
-Description: R functions for random univariate and multivariate finite mixture model generation, estimation, clustering, latent class analysis and classification. Variables can be continuous, discrete, independent or dependent and may follow normal, lognormal, Weibull, gamma, binomial, Poisson, Dirac or circular von Mises parametric families.
+Description: R functions for random univariate and multivariate finite mixture model generation, estimation, clustering, latent class analysis and classification. Variables can be continuous, discrete, independent or dependent and may follow normal, lognormal, Weibull, gamma, Gumbel, binomial, Poisson, Dirac or circular von Mises parametric families.
 Imports: methods, stats, utils, graphics, grDevices, mvtnorm
 License: GPL (>= 2)
-Author: Marko Nagode [aut, cre]
+Author: Marko Nagode [aut, cre], Branislav Panic [ctb]
 Maintainer: Marko Nagode <marko.nagode@fs.uni-lj.si>
 
